# gcc

./: CMakeLists.txt  README  library  library.c
conditionalflows/: conditionalflows  conditionalflows.c  conditionalflows.h
dynamicmalloc/: dynamicmalloc  dynamicmalloc.c  dynamicmalloc.h
filemetadata/: metadata  metadata.c  metadata.h
files/: files  files.c  files.h  mynewfile.db
filesread/: filesread  filesread.c  filesread.h
functions/: functions  functions.c
fundamentals/: library  library.c  library.h
loops/: loops  loops.c
pointers/: pointers  pointers.c  pointers.h
staticalloc/: staticalloc  staticalloc.c  staticalloc.h
strings/: strings  strings.c  strings.h
structmodifier/: structmod  structmod.c  structmod.h
structure/: structure  structure.c
union/: union  union.c  union.h
